# Dare2Drive

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.postgres-exporter  Dockerfile.redis-exporter  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
.claude/: git-workflow.md  pr-workflow.md  settings.local.json
.github/: pull_request_template.md
api/: main.py  metrics.py
bot/: main.py  notifications.py  reveal.py  sector_gating.py  system_gating.py
config/: logging.py  metrics.py  settings.py  tracing.py
data/: class_thresholds.json  environments.json  loot_tables.json  rig_names.json  salvage_rates.json  ship_names.json  tutorial.json
db/: models.py  session.py
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
docs/: ideas.md  monitoring-guide.md
engine/: card_mint.py  class_engine.py  crew_recruit.py  crew_xp.py  durability.py  effect_registry.py  environment.py  expedition_concurrency.py  expedition_custom_id.py  expedition_engine.py  expedition_template.py  narrative_render.py  race_engine.py  rewards.py  rig_namer.py  ship_namer.py  stat_namespace.py  stat_resolver.py  station_types.py  timer_recipes.py
scheduler/: __init__.py  dispatch.py  engine.py  enqueue.py  notifications.py  recovery.py  worker.py
scripts/: audit_pivot.py  build_authoring_docs.py  dev.py  generate_card_image.py  seed_cards.py
tests/: conftest.py  test_admin.py  test_api.py  test_audit_pivot.py  test_authoring_docs_drift.py  test_bot_notifications.py  test_card_mint.py  (+76 more)
(+121 files in other folders)
